<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="arrow_forward">Стрелка вперед</string>
    <string name="icon_support">Иконка Поддержка</string>
    <string name="icon_share">Иконка поделиться</string>
    <string name="course_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="share_link">Поделиться ссылкой</string>
    <string name="choose_mail_app">Выберите почтовое приложение:</string>
    <string name="letter_address">melikhovainna@gmail.com</string>
    <string name="letter_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="letter_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="clear">очистить</string>
    <string name="album_cover">Обложка альбома</string>
    <string name="circle_separator">Разделитель круг</string>
    <string name="renew">Обновить</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_failure">Не удалось установить соединение с сервером </string>
    <string name="response_error">Проблемы с поиском \n\n Код ошибки: %s</string>
    <string name="search_issues">Проблемы с поиском</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="back">Назад</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="play">Играть</string>
    <string name="pause">Пауза</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="Duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="count_start">00:00</string>
    <string name="timer_anchor_text">88:88</string>
    <string name="empty_selected_tracks">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали \n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="selected_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="name_hint">Название*</string>
    <string name="description_hint">Описание</string>
    <string name="create">Создать</string>
    <string name="playlist_cover">Обложка плейлиста</string>
    <string name="track_added_to_playlist">Добавлено в плейлист %s</string>
    <string name="track_already_added_to_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="playlist_successfully_created">"Плейлист успешно создан"</string>
    <string name="finish_playlist_creation">Завершить создание плейлиста?</string>
    <string name="unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="wish_to_delete_track">Хотите удалить трек?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="ok">Ладно</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_named_playlist">Хотите удалить плейлист «%s»?</string>
    <string name="empty_playlist">Плейлист пуст</string>
    <string name="options">опции</string>
    <string name="divider">разделитель</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="no_added_tracks_yet">Вы еще не добавили ни одного трека</string>
    <string name="share_playlist">Поделиться плейлистом</string>
    <string name="sure_delete_playlist">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="quit">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="permission_required">Необходимо разрешение для прослушивания трека</string>
    <string name="go_to_settings">Перейти в настройки для активации показа уведомлений?</string>

    <plurals name="track_count">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="minutes_count">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>