<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:paddingStart="16dp"
    tools:ignore="RtlSymmetry">


    <TextView
        android:id="@+id/btn_back"
        style="@style/TextViewTitle"
        android:layout_marginBottom="24dp"
        android:paddingTop="14dp"
        android:text="@string/settings"
        android:textAppearance="@style/YSMedium22" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingRight="6dp"
        android:paddingBottom="11dp"
        tools:ignore="RtlHardcoded">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/dark_theme"
            android:textAppearance="@style/YSRegular16" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/btn_share"
        style="@style/FrameLayoutSettings"
        tools:ignore="RtlHardcoded">

        <TextView
            style="@style/TextViewSettings"
            android:text="@string/share"
            android:textAppearance="@style/YSRegular16" />

        <ImageView
            style="@style/ImageViewSettings"
            android:contentDescription="@string/icon_share"
            android:src="@drawable/ic_share_24" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/btn_support"
        style="@style/FrameLayoutSettings"
        tools:ignore="RtlHardcoded">

        <TextView
            style="@style/TextViewSettings"
            android:text="@string/support"
            android:textAppearance="@style/YSRegular16" />

        <ImageView
            style="@style/ImageViewSettings"
            android:contentDescription="@string/icon_support"
            android:src="@drawable/ic_support_24" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/btn_agreement"
        style="@style/FrameLayoutSettings"
        tools:ignore="RtlHardcoded">

        <TextView
            style="@style/TextViewSettings"
            android:text="@string/agreement"
            android:textAppearance="@style/YSRegular16" />

        <ImageView
            style="@style/ImageViewSettings"
            android:contentDescription="@string/arrow_forward"
            android:src="@drawable/ic_forward_arrow_24" />

    </FrameLayout>

</LinearLayout>
