<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/btn_back"
            style="@style/TextViewTitle"
            android:text="@string/search"
            android:textAppearance="@style/YSMedium22" />

        <FrameLayout
            style="@style/FrameLayoutSearch"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="16dp"
            android:paddingHorizontal="13dp">

            <EditText
                android:id="@+id/et_search"
                style="@style/EditTextSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="27dp"
                android:autofillHints="no"
                android:background="@android:color/transparent"
                android:hint="@string/search"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1"
                android:maxLength="60"
                android:singleLine="true"
                android:textAppearance="@style/YSRegular16"
                android:textColor="@color/YP_Black" />

            <ImageView
                style="@style/IconSearch"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/search"
                android:src="@drawable/ic_search_24" />

            <ImageView
                android:id="@+id/iv_clear"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical|end"
                android:contentDescription="@string/clear"
                android:src="@drawable/ic_close_24"
                android:visibility="gone" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/recycler_view_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_you_searched"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/you_searched"
                android:textAppearance="@style/YSMedium19"
                android:textColor="?attr/colorOnPrimary"
                android:textFontWeight="500"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_clear_history"
                style="@style/PlaceholderButton"
                android:text="@string/clear_history"
                android:visibility="gone" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="140dp"
            android:indeterminateTint="@color/YP_Blue"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_placeholder"
        style="@style/Placeholder"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_placeholder"
            style="@style/PlaceholderImage"
            android:contentDescription="@string/nothing_found"/>

        <TextView
            android:id="@+id/tv_server_response"
            style="@style/PlaceholderTextView"
            tools:text="Ничего не нашлось" />

        <Button
            android:id="@+id/btn_renew"
            style="@style/PlaceholderButton"
            android:text="@string/renew"/>
    </LinearLayout>

</LinearLayout>